--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -22,10 +22,29 @@
     width: 100%;
     height: 400px;
     display: block;
+    position: relative;
 }
 
 .video-bg {
     width: 100% !important;
     height: 400px !important;
     object-fit: fill;
+    position: absolute;
+    top: 0;
+}
+
+.heading {
+    color: white !important;
+}
+
+.intro {
+    position: absolute;
+    top: 80px;
+    left: 80px;
+    color: white;
+}
+
+.short-desc {
+    display: block;
+    margin-top: 6px;
 }
