--- a/src/components/SearchDocuments/SearchDocuments.css
+++ b/src/components/SearchDocuments/SearchDocuments.css
@@ -4,10 +4,10 @@
 }
 
 .custom-card {
-    width: 90%;
+    width: 90% !important;
     margin: 0 auto;
     min-height: 60px !important;
-    box-shadow: none;
+    box-shadow: none !important;
     border: 0 !important;
     padding: 0 !important
 }
